fix: correct spacing in monthlyFavourites table

--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,6 @@ body {
     background-color: rgba(0,0,0,0.5)
 }
 
-.monthlyFavourites-container {}
-
-.quotes-container {}
-
-.features-container {}
-
 /* Block dividers */
 .block-divider {
     width: 75px;
